--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Make sure the base path matches your GitHub repository name -->
+    <base href="/Game-View/">
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link href="./output.css" rel="stylesheet">
     <title>Game Store</title>
   </head>
