--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Make sure the base path matches your GitHub repository name -->
     <base href="/Game-View/">
     <link rel="icon" type="image/svg+xml" href="/Game-View/vite.svg" />
-    <link href="./output.css" rel="stylesheet">
+    <link href="/Game-View/output.css" rel="stylesheet">
     <title>Game Store</title>
     <script type="module" crossorigin src="/Game-View/index-DTimaJ7y.js"></script>
     <link rel="stylesheet" crossorigin href="/Game-View/index-ckSu5K-b.css">
